--- a/Projekt.Rmd
+++ b/Projekt.Rmd
@@ -26,7 +26,12 @@ Es handelt sich hierbei um eine *vorhersagende Forschungsfrage*, da untersucht w
 Desweiteren handelt es sich um eine *korrelative Forschungshypothese*, da nur ein möglicher Zusammenhang zwischen den Variablen (welcher zum Beispiel in Form eines Modelles für Prognosen verwendet werden könnte) wird. Unsere Forschungshypothese zielt nicht darauf ab einen kausalen Zusammenhang zwischen dem Sternzeichen und Charaktereigenschaft zu be- oder wiederlegen.
 
 Für die Charaktereigenschaften einer Person gibt es viele potentielle Störfaktoren. Zum Beispiel die Sozialisation der Person, welche eine Anpassung an gesellschaftliche Denk- und Gefühlsmuster durch Verinnerlichung von sozialen Normen beschreibt. Wichtige Beiträge für die Erforschung der Entwicklung von Persönlichkeitsmerkmalen in der frühen Kindheit, Jugend bis hin zum mittleren und höheren Lebensalter (daher über die gesamte Lebensspanne) kommen vor allem aus Humangenetik, Entwicklungsbiologie, Ethnologie und Kulturanthropologie, sowie aus sonstigen Arbeitsrichtungen der Psychologie. Für unsere konkrete Forschungshypothese hat dies jedoch keinen direkten Einfluss, da davon auszugehen ist, dass sich Störfaktoren auf die Gesamtheit auswirken, und nicht nur auf eine Gruppe mit einem Sternzeichen. Auf mögliche Störfaktoren, welche erwartete Verteilungen der Ausprägungen beeinflussen, wird in der deskriptiven Analyse genauer eingegangen.
-\textcolor{red}{Ein weiterer Störfaktor ist die Person, welche die Daten erhebt. Um dies zu erläutern, wird im folgenden kurz auf die Methode der Datenerhebung eingegangen. Für die Beantwortung der Forschungsfrage wurden Daten von den Autor:innen gesammelt. Um Unschärfen in der Selbsteinschätzung zu verhindern, bewerteten die Autor:innen Personen aus dem Umfeld nach den Myers-Briggs Typenindikatoren. Es handlet sich dabei um vier binären Kategorien, welche unterschiedliche Charaktereigenschaften von Menschen kategorisieren. Da es sich hierbei am Ende des Tages um eine subjektive Einschätzung handelt, ist die einschätzende Person ein potentieller Störfaktor. Um diesen Störfaktor auszugleichen, wurde von allen Autoren gleichermaßen zum Datensatz beigetragen. Dies gleicht auch Unterschiede im Umfeld der erhebenden Personen aus. Eine weitere Fehlerquelle sind Doppelerfassungen im Datensatz. Da sich der Bekanntenkreis der Autor:innen sich kaum überlappt, und aktiv darauf geachtet wurde keine Duplikate zu erfassen, stellt dies nach Meinung der Autor:innen jedoch kein Problem dar.}
+\textcolor{red}{Ein weiterer Störfaktor ist die Person, welche die Daten erhebt. Um dies zu erläutern, wird im folgenden kurz auf die Methode der Datenerhebung und das Forschungsdesign im Allgemeinen eingegangen.}
+
+## Forschungsdesign
+\textcolor{red}{Für die Beantwortung der Forschungsfrage wurden Daten von den Autor:innen gesammelt. Um Unschärfen in der Selbsteinschätzung zu verhindern, bewerteten die Autor:innen Personen aus dem Umfeld nach den Myers-Briggs Typenindikatoren. Es handlet sich dabei um vier binären Kategorien, welche unterschiedliche Charaktereigenschaften von Menschen kategorisieren. Zusätzlich wurde der Geburtstag (Tag und Monat) erfasst. Die Erfassung wurde in einer für alle Autor:innen zugänglichen geschützten Datenbank durchgeführt. Da es sich hierbei am Ende des Tages um eine subjektive Einschätzung handelt, ist die einschätzende Person ein potentieller Störfaktor. Um diesen Störfaktor auszugleichen, wurde von allen Autoren gleichermaßen zum Datensatz beigetragen. Dies gleicht auch Unterschiede im Umfeld der erhebenden Personen aus. Eine weitere Fehlerquelle sind Doppelerfassungen im Datensatz. Da sich der Bekanntenkreis der Autor:innen sich kaum überlappt, und aktiv darauf geachtet wurde keine Duplikate zu erfassen, stellt dies nach Meinung der Autor:innen jedoch kein Problem dar.}
+
+\textcolor{red}{Zwar wird von keinen signifikanten Unterschieden vom Einfluss (oder Nicht-Einfluss) von Sternzeichen auf Charaktereigenschaft in unterschiedlichen Altersgruppen und sozialen Kreisen ausgegangen, jedoch ist dies zum aktuellen Stand nicht empirisch belegt. Daher können wir nur von einer Grundpopulation ausgehen, für welche die Stichprobe repräsentativ ist. Es handelt sich bei den erfassten Personen um größtenteils österreichische Student:innen oder Akademiker:innen im Alter von 20-35 Jahren. Um schnelle und falsche Schlüsse auf eine zu große Grundgesamtheit bei unserem Stichprobenumfang zu vermeiden, bezieht sich die Grundpopulation auf genau ebendiesen beschriebenen Personenkreis.}
 
 # Beschreibung des Datensatzes ("Datensteckbrief")
 
