Spelling and gender mistakes corrected.

--- a/Projekt.Rmd
+++ b/Projekt.Rmd
@@ -11,27 +11,27 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Ausgangssituation
 
-Die Tierkreiszeichen (im Allgemeinen vereinfacht Sternzeichen genannt) beschreiben zwölf gleich große Abschnitte im Tierkreis, einer 20 Grad breiten Zone um die Ekliptik (scheinbare Sonnenbahn). Sie werden noch heute häufig in der Astrologie für z.B. Horoskope verwendet, und spalten damit die Meinungen ob durch sie valide Prognosen gestellt werden können. In dieser Kontroverse gründet die Motivation unserer Forschung, um dem oft sehr emotional geführten Diskurs ein empirisch untermauertes Argument hinzuzufügen.
+Die Tierkreiszeichen (im Allgemeinen vereinfacht Sternzeichen genannt) beschreiben zwölf gleich große Abschnitte im Tierkreis, einer 20 Grad breiten Zone um die Ekliptik (scheinbare Sonnenbahn). Sie werden noch heute häufig in der Astrologie für z.B. Horoskope verwendet, und spalten damit die Meinungen, ob durch sie valide Prognosen gestellt werden können. In dieser Kontroverse gründet die Motivation unserer Forschung, um dem oft sehr emotional geführten Diskurs ein empirisch untermauertes Argument hinzuzufügen.
 
 **Forschungsfrage**: Gibt es einen Zusammenhang zwischen dem Sternzeichen einer Person und ihren Charaktereigenschaften?
 
 **Forschungshypothese**: In vergleichbaren Gruppen von Menschen mit demselben Sternzeichen wird eine Gruppe eine stärkere oder schwächere Ausprägung einer Charaktereigenschaft aufweisen.
 
-**Nullhypothese**: Es gibt keine signifikanten Unterschide in den beobachteten Charaktereigenschaften zwischen vergleichbaren Gruppen von Menschen mit demselben Sternzeichen. Sternzeichen und Charaktereigenschaften sind unabhängig.
+**Nullhypothese**: Es gibt keine signifikanten Unterschiede in den beobachteten Charaktereigenschaften zwischen vergleichbaren Gruppen von Menschen mit demselben Sternzeichen. Sternzeichen und Charaktereigenschaften sind unabhängig.
 
-**Alternativhypothese**: Es gibt signifkante Unterschiede in beobachteten Charaktereigenschaft zwischen vergleichbaren Gruppen von Menschen mit demselben Sternzeichen. Zumindest eine Charaktereigenschaft ist bei zumindest einer Gruppe besonders stark oder schwach ausgeprägt. Sternzeichen und Charaktereigenschaft sind abhängig.
+**Alternativhypothese**: Es gibt signifikante Unterschiede in beobachteten Charaktereigenschaft zwischen vergleichbaren Gruppen von Menschen mit demselben Sternzeichen. Zumindest eine Charaktereigenschaft ist bei zumindest einer Gruppe besonders stark oder schwach ausgeprägt. Sternzeichen und Charaktereigenschaft sind abhängig.
 
-Es handelt sich hierbei um eine *vorhersagende Forschungsfrage*, da untersucht wird was passiwert, wenn sich eine Variable (Sternzeichen) ändert. Es wird die Beeinflusssung dieser Variable auf die zweite Variable (Charaktereigenschaft) untersucht. Dazu werden Daten erhoben, mit welcher die Hypothese getestet wird.
+Es handelt sich hierbei um eine *vorhersagende Forschungsfrage*, da untersucht wird was passiert, wenn sich eine Variable (Sternzeichen) ändert. Es wird die Beeinflussung dieser Variable auf die zweite Variable (Charaktereigenschaft) untersucht. Dazu werden Daten erhoben, mit welcher die Hypothese getestet wird.
 
-Desweiteren handelt es sich um eine *korrelative Forschungshypothese*, da nur ein möglicher Zusammenhang zwischen den Variablen (welcher zum Beispiel in Form eines Modelles für Prognosen verwendet werden könnte) wird. Unsere Forschungshypothese zielt nicht darauf ab einen kausalen Zusammenhang zwischen dem Sternzeichen und Charaktereigenschaft zu be- oder wiederlegen.
+Des Weiteren handelt es sich um eine *korrelative Forschungshypothese*, da nur ein möglicher Zusammenhang zwischen den Variablen (welcher zum Beispiel in Form eines Modells für Prognosen verwendet werden könnte) wird. Unsere Forschungshypothese zielt nicht darauf ab einen kausalen Zusammenhang zwischen dem Sternzeichen und Charaktereigenschaft zu be- oder wiederlegen.
 
-Für die Charaktereigenschaften einer Person gibt es viele potentielle Störfaktoren. Zum Beispiel die Sozialisation der Person, welche eine Anpassung an gesellschaftliche Denk- und Gefühlsmuster durch Verinnerlichung von sozialen Normen beschreibt. Wichtige Beiträge für die Erforschung der Entwicklung von Persönlichkeitsmerkmalen in der frühen Kindheit, Jugend bis hin zum mittleren und höheren Lebensalter (daher über die gesamte Lebensspanne) kommen vor allem aus Humangenetik, Entwicklungsbiologie, Ethnologie und Kulturanthropologie, sowie aus sonstigen Arbeitsrichtungen der Psychologie. Für unsere konkrete Forschungshypothese hat dies jedoch keinen direkten Einfluss, da davon auszugehen ist, dass sich Störfaktoren auf die Gesamtheit auswirken, und nicht nur auf eine Gruppe mit einem Sternzeichen. Auf mögliche Störfaktoren, welche erwartete Verteilungen der Ausprägungen beeinflussen, wird in der deskriptiven Analyse genauer eingegangen.
-\textcolor{red}{Ein weiterer Störfaktor ist die Person, welche die Daten erhebt. Um dies zu erläutern, wird im folgenden kurz auf die Methode der Datenerhebung und das Forschungsdesign im Allgemeinen eingegangen.}
+Für die Charaktereigenschaften einer Person gibt es viele potenzielle Störfaktoren. Zum Beispiel die Sozialisation der Person, welche eine Anpassung an gesellschaftliche Denk- und Gefühlsmuster durch Verinnerlichung von sozialen Normen beschreibt. Wichtige Beiträge für die Erforschung der Entwicklung von Persönlichkeitsmerkmalen in der frühen Kindheit, Jugend bis hin zum mittleren und höheren Lebensalter (daher über die gesamte Lebensspanne) kommen vor allem aus Humangenetik, Entwicklungsbiologie, Ethnologie und Kulturanthropologie, sowie aus sonstigen Arbeitsrichtungen der Psychologie. Für unsere konkrete Forschungshypothese hat dies jedoch keinen direkten Einfluss, da davon auszugehen ist, dass sich Störfaktoren auf die Gesamtheit auswirken, und nicht nur auf eine Gruppe mit einem Sternzeichen. Auf mögliche Störfaktoren, welche erwartete Verteilungen der Ausprägungen beeinflussen, wird in der deskriptiven Analyse genauer eingegangen.
+Ein weiterer Störfaktor ist die Person, welche die Daten erhebt. Um dies zu erläutern, wird im folgenden kurz auf die Methode der Datenerhebung und das Forschungsdesign im Allgemeinen eingegangen.
 
 ## Forschungsdesign
-\textcolor{red}{Für die Beantwortung der Forschungsfrage wurden Daten von den Autor:innen gesammelt. Um Unschärfen in der Selbsteinschätzung zu verhindern, bewerteten die Autor:innen Personen aus dem Umfeld nach den Myers-Briggs Typenindikatoren. Es handlet sich dabei um vier binären Kategorien, welche unterschiedliche Charaktereigenschaften von Menschen kategorisieren. Zusätzlich wurde der Geburtstag (Tag und Monat) erfasst. Die Erfassung wurde in einer für alle Autor:innen zugänglichen geschützten Datenbank durchgeführt. Da es sich hierbei am Ende des Tages um eine subjektive Einschätzung handelt, ist die einschätzende Person ein potentieller Störfaktor. Um diesen Störfaktor auszugleichen, wurde von allen Autoren gleichermaßen zum Datensatz beigetragen. Dies gleicht auch Unterschiede im Umfeld der erhebenden Personen aus. Eine weitere Fehlerquelle sind Doppelerfassungen im Datensatz. Da sich der Bekanntenkreis der Autor:innen sich kaum überlappt, und aktiv darauf geachtet wurde keine Duplikate zu erfassen, stellt dies nach Meinung der Autor:innen jedoch kein Problem dar.}
+Für die Beantwortung der Forschungsfrage wurden Daten von den Autor:innen gesammelt. Um Unschärfen in der Selbsteinschätzung zu verhindern, bewerteten die Autor:innen Personen aus dem Umfeld nach den Myers-Briggs Typenindikatoren. Es handelt sich dabei um vier binären Kategorien, welche unterschiedliche Charaktereigenschaften von Menschen kategorisieren. Zusätzlich wurde der Geburtstag (Tag und Monat) erfasst. Die Erfassung wurde in einer für alle Autor:innen zugänglichen geschützten Datenbank durchgeführt. Da es sich hierbei am Ende des Tages um eine subjektive Einschätzung handelt, ist die einschätzende Person ein potenzieller Störfaktor. Um diesen Störfaktor auszugleichen, wurde von allen Autor:innen gleichermaßen zum Datensatz beigetragen. Dies gleicht auch Unterschiede im Umfeld der erhebenden Personen aus. Eine weitere Fehlerquelle sind Doppelerfassungen im Datensatz. Da sich der Bekanntenkreis der Autor:innen sich kaum überlappt, und aktiv darauf geachtet wurde keine Duplikate zu erfassen, stellt dies nach Meinung der Autor:innen jedoch kein Problem dar.
 
-\textcolor{red}{Zwar wird von keinen signifikanten Unterschieden vom Einfluss (oder Nicht-Einfluss) von Sternzeichen auf Charaktereigenschaft in unterschiedlichen Altersgruppen und sozialen Kreisen ausgegangen, jedoch ist dies zum aktuellen Stand nicht empirisch belegt. Daher können wir nur von einer Grundpopulation ausgehen, für welche die Stichprobe repräsentativ ist. Es handelt sich bei den erfassten Personen um größtenteils österreichische Student:innen oder Akademiker:innen im Alter von 20-35 Jahren. Um schnelle und falsche Schlüsse auf eine zu große Grundgesamtheit bei unserem Stichprobenumfang zu vermeiden, bezieht sich die Grundpopulation auf genau ebendiesen beschriebenen Personenkreis.}
+Zwar wird von keinen signifikanten Unterschieden vom Einfluss (oder Nicht-Einfluss) von Sternzeichen auf Charaktereigenschaft in unterschiedlichen Altersgruppen und sozialen Kreisen ausgegangen, jedoch ist dies zum aktuellen Stand nicht empirisch belegt. Daher können wir nur von einer Grundpopulation ausgehen, für welche die Stichprobe repräsentativ ist. Es handelt sich bei den erfassten Personen um größtenteils österreichische Student:innen oder Akademiker:innen im Alter von 20-35 Jahren. Um schnelle und falsche Schlüsse auf eine zu große Grundgesamtheit bei unserem Stichprobenumfang zu vermeiden, bezieht sich die Grundpopulation auf genau ebendiesen beschriebenen Personenkreis.
 
 # Beschreibung des Datensatzes ("Datensteckbrief")
 
@@ -53,7 +53,7 @@ Für die Charaktereigenschaften einer Person gibt es viele potentielle Störfakt
   * Angabe von Testbezeichnung
   * Begründung der Testauswahl (z.B. robuste Methoden bei Ausreißern etc.)
   * Null- und Alternativhypothese
-  * Signifkanzniveau
+  * Signifikanzniveau
   * P-Wert
   * Formale Schlussfolgerung (Vergleich P-Wert mit Signifikanzniveau)
   * Inhaltliche Schlussfolgerung
@@ -63,7 +63,7 @@ Für die Charaktereigenschaften einer Person gibt es viele potentielle Störfakt
   * Bei Regressionsmodellen: Ableitung der Modellformel, sowie Interpretation des Einflusses der unabhängigen Variablen auf die abhängige Variable ("Effektstärke"). Unterstützung via Effektplot bzw. Modellplot
   * Beurteilung der Signifikanz der Parameter, sowie des Gesamtmodells
   * Beurteilung der Modellgüte (z.B. R<sup>2</sup> bei linearer Regression)
-  * Modelldiagnostik (Normalverteilung der Residuen, Restzusammenhang der Residuen mit den geschätzen Werten)
+  * Modelldiagnostik (Normalverteilung der Residuen, Restzusammenhang der Residuen mit den geschätzten Werten)
   * Diagramm mit erwarteten Werten (z.B. Regressionsgerade) samt Konfidenzbändern
   * Vorhersagen (erwartete Werte, bzw. Prognoseintervalle für Einzelwerte)
 
@@ -99,7 +99,7 @@ Für die Charaktereigenschaften einer Person gibt es viele potentielle Störfakt
 
 ### Definition der Population/Grundgesamtheit
 
-### Stichprobenbenziehung
+### Stichprobenbeziehung
 
 ### Repräsentativität
 
@@ -129,7 +129,7 @@ Für die Charaktereigenschaften einer Person gibt es viele potentielle Störfakt
 
 ### Definition der Population/Grundgesamtheit
 
-### Stichprobenbenziehung
+### Stichprobenbeziehung
 
 ### Repräsentativität
 
