--- a/Projekt.Rmd
+++ b/Projekt.Rmd
@@ -33,6 +33,52 @@ Für die Beantwortung der Forschungsfrage wurden Daten von den Autor:innen gesam
 
 Zwar wird von keinen signifikanten Unterschieden vom Einfluss (oder Nicht-Einfluss) von Sternzeichen auf Charaktereigenschaft in unterschiedlichen Altersgruppen und sozialen Kreisen ausgegangen, jedoch ist dies zum aktuellen Stand nicht empirisch belegt. Daher können wir nur von einer Grundpopulation ausgehen, für welche die Stichprobe repräsentativ ist. Es handelt sich bei den erfassten Personen um größtenteils österreichische Student:innen oder Akademiker:innen im Alter von 20-35 Jahren. Um schnelle und falsche Schlüsse auf eine zu große Grundgesamtheit bei unserem Stichprobenumfang zu vermeiden, bezieht sich die Grundpopulation auf genau ebendiesen beschriebenen Personenkreis.
 
+## Operationalisierung
+
+\textcolor{red}{Wie bereits allgemein beschrieben, werden Informationen zum Sternzeichen und zu den Charaktereigenschaften von Personen nach dem Myers-Briggs Typenindikator mit Hilfe einer geteilten Datenbank gesammelt. Im konkreten bedeutet dies, dass primär folgende Variablen mit den genannten Ausprägungsformen erfasst werden:}
+
+* \textcolor{red}{Geburtsdatum (Tag und Monat, z.B. 04.11.)}
+* \textcolor{red}{Charaktereigenschaften:}
+  * \textcolor{red}{Extraversion / Introversion}
+  * \textcolor{red}{Intuition / Sensorik}
+  * \textcolor{red}{Denken / Fühlen}
+  * \textcolor{red}{Wahrnehmen / Beurteilen}
+
+\textcolor{red}{Es handelt sich bei den vier Merkmalen welche die Charaktereigenschaften von Personen beschreiben jeweils um kategoriale Variablen mit binärer Ausprägung: Jede der vier Kategorien wird in zwei mögliche Ausprägungen unterteilt. So kann die Variable "Extraversion / Introversion" entweder den Wert "Extraversion" oder "Introversion" annehmen, jedoch nie beide oder keinen der beiden möglichen Werte. Dies kann im Folgenden auch kodiert werden:}
+
+* \textcolor{red}{Charaktereigenschaft1: Extraversion (0) ... Introversion (1)}
+* \textcolor{red}{Charaktereigenschaft2: Intuition (0) ... Sensorik (1)}
+* \textcolor{red}{Charaktereigenschaft3: Denken (0) ... Fühlen (1)}
+* \textcolor{red}{Charaktereigenschaft4: Wahrnehmen (0) ... Beurteilen (1)}
+
+\textcolor{red}{In der Datenerfassung wird ein verpflichtendes Auswahlfeld verwendet, welches den Wertebereich auf die beschriebenen binären Ausprägungen einschränkt.}
+
+\textcolor{red}{Beim Geburtsdatum handelt es sich um ein verpflichtendes Datumsfeld, welches den Wertebereich auf gültige Tages und Monatswerte festlegt. Im folgenden wird aus dem Geburtsdatum das Tierkreiszeichen abgeileitet. Da das Geburtsjahr für die Bestimmung des Tierkreiszeichens nicht notwendig ist, wird dieses nicht erfasst.}
+
+\textcolor{red}{Es handelt sich beim Tierkreiszeichen um eine kategoriale Variable, mit zwölf möglichen Ausprägungen:}
+
+* \textcolor{red}{Widder (21.03. - 20.04.)}
+* \textcolor{red}{Stier (21.04. - 21.05.)}
+* \textcolor{red}{Zwillinge (22.05. - 21.06.)}
+* \textcolor{red}{Krebs (22.06. - 22.07.)}
+* \textcolor{red}{Löwe (23.07. - 22.08.)}
+* \textcolor{red}{Jungfrau (23.08. - 22.09.)}
+* \textcolor{red}{Waage (23.09. - 22.10.)}
+* \textcolor{red}{Skorpion (23.10. - 22.11.)}
+* \textcolor{red}{Schütze (23.11. - 20.12.)}
+* \textcolor{red}{Steinbock (21.12. - 19.01.)}
+* \textcolor{red}{Wassermann (20.01. - 18.02.)}
+* \textcolor{red}{Fische (19.02. - 20.03.)}
+
+\textcolor{red}{Um den Datensatz auch hinsichtlich möglichen Störvariablen zu untersuchen, werden außerdem folgende Metadaten erfasst:}
+
+* \textcolor{red}{Erfassende Person (Freitextfeld welcher mit dem Namen der erfassenden Person befüllt wird, in unserem Fall der Vor- und Nachname einer der drei Autor:innen)}
+* \textcolor{red}{Erfassungsdatum (Tag, Monat und Jahr, z.B. 09.01.2023)}
+
+## Statistische Methoden
+
+
+
 # Beschreibung des Datensatzes ("Datensteckbrief")
 
 * Stichprobenumfang
